<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fist Bump</string>
    <string name="title_section1">Inbumps</string>
    <string name="title_section2">Friends</string>
    <string name="title_section3">Outbumps</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="hello_world">Hello world!</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="signup_text">Sign up</string>
    <string name="title_activity_signup">Signup</string>
    <string name="email_hint">Email</string>
    <string name="signup_button">Signup</string>
    <string name="signup_error_message">Please make sure you enter a username, password and email address.</string>
    <string name="signup_error_title">Oops!</string>
    <string name="login_error_title">Oops!</string>
    <string name="login_error_message">Please make sure you enter a username and password.</string>
    <string name="action_logout">Logout</string>
    <string name="no_new_messages">No new messages.</string>
    <string name="empty_inbox">No new messages.</string>
    <string name="empty_friends">Make some friends!</string>
    <string name="menu_edit_friends_label">Edit Friends</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="error_title">We\'re sorry!</string>
    <string name="menu_camera_label">Camera</string>
    <string name="error_external_storage">There was a problem accessing your device\'s external storage.</string>
    <string name="error_general">Sorry, there was an error!</string>
    <string name="error_video_size">The selected video must be less than 10MB</string>
    <string name="error_file_not_found">Error opening file.</string>
    <string name="error_file_size_too_large">The selected file is too large! Select a new file.</string>

    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>

    <string name="title_activity_recipients">Choose recipients</string>
    <string name="empty_recipients_list_message">Choose some friends first.</string>
    <string name="action_send">Send</string>
    <string name="error_selecting_file_message">There was an error with the file selected. Please select a different file.</string>
    <string name="error_selecting_file_title">We\'re sorry!</string>
    <string name="success_message">Message sent!</string>
    <string name="error_sending_message">There was an error sending your message. Please try again.</string>
    <string name="title_activity_view_image">Fist Bump</string>
    <string name="error_loading_image">There was an error loading the image. Try again.</string>
    <string name="bump_button_text">Fist Bump</string>

</resources>
